# Aivatar-Demo

./: .gitignore  AGENTS.md  ATTRIBUTIONS.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  test.md  vite.config.ts
docs/: aivatar-session-plugin.md  github-release-draft-v0.1.0.md  release-checklist.md
drafts/: clair-de-lune-8bit-preview.html  flight-of-the-bumblebee-8bit-preview.html
plugins/aivatar-session-bridge/: aivatar-connect.cmd  aivatar-disconnect.cmd  aivatar-setup.cmd  hooks.json
plugins/aivatar-session-bridge/.codex-plugin/: plugin.json
plugins/aivatar-session-bridge/scripts/: aivatar-connect.mjs  aivatar-disconnect.mjs  aivatar-heartbeat.mjs  aivatar-status-hook.mjs  aivatar-status.mjs  aivatar-watch.mjs  codex-usage.mjs  setup-path.ps1
public/audio/: README.md
public/config/: aivatar.config.json
scripts/: aivatar-cli-connect.mjs  aivatar-cli-disconnect.mjs  aivatar-cli-watchdog.mjs  aivatar-connected-run.mjs  aivatar-learning-worker.mjs  aivatar-run.mjs  aivatar-session-plugin.mjs  claude-code-aivatar-hook.mjs  codex-session-discovery.mjs  codex-status-bridge.mjs  mock-codex-status.mjs  send-codex-status.mjs
src/: App.tsx  i18n.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex_discovery.rs  lib.rs  local_bridge.rs  main.rs
src/components/: PixelAssetEditor.tsx
src/data/: defaultContent.ts  loadContent.ts
src/game/: interactions.ts  renderScene.ts  simulation.ts
src/hooks/: useCodexStatus.ts
(+2 files in other folders)
