[package]
name = "aivatar"
version = "0.1.0"
description = "A pixel room desktop companion for Codex status."
authors = ["Aivatar"]
edition = "2021"

[lib]
name = "aivatar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
